# pol

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
desktop/: main.js  package-lock.json  package.json  preload.js  tests.bot-command.test.js  tests.executions-parser.test.js
desktop/lib/: bot-command.js  executions.js
desktop/renderer/: app.js  index.html  styles.css
docs/: canary-live-launch-prd.md  canary-live-runbook.md  local-runbook.md  mvp-validation-test-plan.md
scripts/: canary_stage0_no_trade.sh  canary_stage1_tiny_live.sh  emergency_stop.sh
src/pm1h_edge_trader/: __init__.py  api_credentials.py  config.py  emergency_stop.py  live_balance.py  live_claim.py  main.py  manual_entry.py  types.py
src/pm1h_edge_trader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pm1h_edge_trader/engine/: __init__.py  math_engine.py
src/pm1h_edge_trader/execution/: __init__.py  adapters.py  engine.py  polymarket_live_adapter.py  safety.py  types.py
tests/: test_api_credentials.py  test_app_resume_state.py  test_app_runtime_wiring.py  test_binance_underlying_timestamp.py  test_complete_set_arb.py  test_config_adopt_positions_flag.py  test_config_live_risk_flags.py  test_emergency_stop.py  test_epl_state_manager.py  test_execution_engine_token_id.py  test_execution_log_record_fields.py  test_fresh_start.py  test_fresh_start_ignore_state.py  test_live_balance.py  test_live_balance_monitor.py  test_live_claim.py  test_live_mode_config.py  test_market_rollover.py  test_outcome_side.py  test_paper_fill_logic.py  test_paper_result_tracker.py  test_paper_settlement.py  test_policy_adaptive_layers.py  test_policy_bandit.py  test_policy_bandit_pending_roundtrip.py  test_policy_runtime_wiring.py  test_polymarket_live_adapter.py  test_positions_reconciler.py  test_report_action_reason_logging.py  test_resume_policy_flags.py  test_risk_circuit_breaker.py  test_tick_summary_logging.py  test_volatility_pipeline.py
tests/integration/: test_mvp_validation.py
tests/stubs/: run_stub_cycle.py
(+34 files in other folders)
