[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm1h-edge-trader"
version = "0.1.0"
description = "Minimal MVP scaffold for PM-1H Edge Trader."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client",
    "web3>=6,<8",
]

[project.scripts]
pm1h-edge-trader = "pm1h_edge_trader.main:main"
pm1h-manual-entry = "pm1h_edge_trader.manual_entry:main"
pm1h-live-balance = "pm1h_edge_trader.live_balance:main"
pm1h-derive-api-creds = "pm1h_edge_trader.api_credentials:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
